Tue Dec  2 05:03:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/RawComponent.cpp:
        * MDE/GME/paradigms/PICML/interpreter/Isislab_Emulation/RawComponent.cpp:
        * etc/config/cuts_gme.mpb:

          . Fixed compilation errors related to relation of GAME
            in CoSMIC.

Mon Nov 24 14:15:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CUTS.mpc:
        * cuts/exceptions.idl:

          . Moved all the exceptions to a common location.

        * cuts/utils/db/SQLite/Query.cpp:

          . Added tracing information for debugging purposes.

        * cuts/utils/logging/client/LocalTestLoggerClient_i.h:
        * cuts/utils/logging/client/LocalTestLoggerClient_i.cpp:
        * cuts/utils/logging/client/Local_Logging_Client_App.h:
        * cuts/utils/logging/client/Local_Logging_Client_App.cpp:
        * cuts/utils/logging/client/Logging_Client.h:
        * cuts/utils/logging/client/Logging_Client.cpp:
        * cuts/utils/logging/client/Logging_Client_Options.h:
        * cuts/utils/logging/client/Logging_Client_Task.h:
        * cuts/utils/logging/client/Logging_Client_Task.cpp:
        * cuts/utils/logging/client/Logging_Client_export.h:
        * cuts/utils/logging/client/TestLoggerClient_i.h:
        * cuts/utils/logging/client/TestLoggerClient_i.cpp:
        * cuts/utils/logging/client/TestLoggerFactory_i.h:
        * cuts/utils/logging/client/TestLoggerFactory_i.inl:
        * cuts/utils/logging/client/TestLoggerFactory_i.cpp:
        * cuts/utils/logging/client/TestLogger_i.cpp:
        * cuts/utils/logging/client/Test_Logger_Map.h:
        * cuts/utils/logging/client/Test_Logger_Map.cpp:
        * cuts/utils/logging/client/client.idl:
        * cuts/utils/logging/client/client.mpc:
        * cuts/utils/logging/logging.idl:
        * cuts/utils/logging/server/Logging_Server.h:
        * cuts/utils/logging/server/Logging_Server.inl: